force-app/main/default/objects/AcctPlanDepositDomestic__c/AcctPlanDepositDomestic__c.object-meta.xml
<CustomObject>
    <label>Account Plan Deposit Domestic</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Plan Deposit Domestic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Deposit Domestic</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>