force-app/main/default/objects/AcctPlanDepositDomestic__c/fields/AccountPlanDepositDomesticDeposit__c.field-meta.xml
<CustomField>
    <fullName>AccountPlanDepositDomesticDeposit__c</fullName>
    <label>Account Plan Wallet</label>
    <referenceTo>AcctPlanWallet__c</referenceTo>
    <relationshipLabel>Account Plan Deposit Domestic</relationshipLabel>
    <relationshipName>Account_Plan_Deposit_Domestic</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>