force-app/main/default/objects/AcctPlanDepositDomestic__c/fields/AmountBank2__c.field-meta.xml
<CustomField>
    <fullName>AmountBank2__c</fullName>
    <description>Deposit Amount - Other Bank 2</description>
    <inlineHelpText>Deposit Amount - Other Bank 2</inlineHelpText>
    <label>Amount (THB)-[Bank2]</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>