force-app/main/default/objects/AcctPlanDepositDomestic__c/fields/AmountBank3__c.field-meta.xml
<CustomField>
    <fullName>AmountBank3__c</fullName>
    <description>Deposit Amount - Other Bank 3</description>
    <inlineHelpText>Deposit Amount - Other Bank 3</inlineHelpText>
    <label>Amount (THB)-[Bank3]</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>