force-app/main/default/objects/AcctPlanDepositDomestic__c/fields/AvgRatePercent__c.field-meta.xml
<CustomField>
    <fullName>AvgRatePercent__c</fullName>
    <description>Average Rate (%)</description>
    <inlineHelpText>Average Rate (%)</inlineHelpText>
    <label>Average Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>