force-app/main/default/objects/AcctPlanDepositDomestic__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Deposit Product</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Deposit Product</inlineHelpText>
    <label>Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>