force-app/main/default/objects/AcctPlanDepositDomestic__c/fields/RateBank3__c.field-meta.xml
<CustomField>
    <fullName>RateBank3__c</fullName>
    <description>Interest Rate - Other Bank 3</description>
    <inlineHelpText>Interest Rate - Other Bank 3</inlineHelpText>
    <label>Rate(%)-[Bank3]</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>