force-app/main/default/objects/AcctPlanDepositDomestic__c/fields/RateBank4__c.field-meta.xml
<CustomField>
    <fullName>RateBank4__c</fullName>
    <description>Interest Rate - Other Bank 4</description>
    <inlineHelpText>Interest Rate - Other Bank 4</inlineHelpText>
    <label>Rate(%)-[Bank4]</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>