force-app/main/default/objects/AcctPlanDepositDomestic__c/fields/TMBAmount__c.field-meta.xml
<CustomField>
    <fullName>TMBAmount__c</fullName>
    <description>Deposit Amount - TMB</description>
    <inlineHelpText>Deposit Amount - TMB</inlineHelpText>
    <label>Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>