force-app/main/default/objects/AcctPlanDepositDomestic__c/fields/TMBRate__c.field-meta.xml
<CustomField>
    <fullName>TMBRate__c</fullName>
    <description>Interest Rate - TMB</description>
    <inlineHelpText>Interest Rate - TMB</inlineHelpText>
    <label>Rate%</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>