force-app/main/default/objects/AcctPlanDepositDomestic__c/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TransactionType</label>
    <type>Checkbox</type>
</CustomField>